modify nil's skeleton to use username and added some css

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -4,7 +4,7 @@
   <fieldset>
 
   <!-- Form Name -->
-  <legend>User Login</legend>
+  <legend class="form-group">User Login</legend>
   <% if @error %>
     <div class="errors-wrapper">
       <span>Login failed:</span>
@@ -17,7 +17,7 @@
   <div class="form-group">
     <label class="col-md-4 control-label" for="email">Email Address</label>
     <div class="col-md-4">
-    <input id="email" name="email" type="email" class="form-control input-md" required="">
+    <input id="email" name="email" type="email" class="form-control input-md" placeholder="example@gmail.com" required="">
     </div>
   </div>
   <br>
@@ -25,7 +25,7 @@
   <div class="form-group">
     <label class="col-md-4 control-label" for="password_plaintext">Password</label>
     <div class="col-md-4">
-      <input id="password_plaintext" name="password_plaintext" type="password" placeholder="" class="form-control input-md" required="">
+      <input id="password_plaintext" name="password_plaintext" placeholder="*******" type="password" placeholder="" class="form-control input-md" required="">
     </div>
   </div>
   <br>
