--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,14 +3,14 @@
 <head>
   <link rel="stylesheet" href="/css/normalize.css?app=skills">
   <link rel="stylesheet" href="/css/application.css?app=skills">
-
+  <link href='https://fonts.googleapis.com/css?family=Corben' rel='stylesheet' type='text/css'>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js?app=skills"></script>
 
   <title></title>
 </head>
-<nav>
-  <center><br><a href="/">Home</a> | <a href="/users/new">Register</a> | <a href="/sessions/new">Login</a> | <a href="/logout">Logout</a> | <a href="/secret">secret area! shhhh</a></center>
+<nav class="main-nav">
+  <br><li><a href="/">Home</a></li><li><a href="/users/new">Register</a></li><li><a href="/sessions/new">Login</a></li><li><a id="float-right" href="/logout">Logout</a></li>
 </nav>
 <body>
   <%= yield %>
