--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,47 +2,50 @@
   margin: 20px auto;
   width: 800px;
   padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
+  clear: both;
+  font-family: 'Corben', cursive;
 }
 
 .container h1 {
   font-size: 17pt;
-
 }
 
-nav {
-  width: 100%;
-  height: 40px;
+.form-group {
+  font-family: 'Corben', cursive;
   font-weight: bold;
+  font-size: .9em;
 }
 
-nav .brand, nav .brand a {
-  margin-left: 25px;
-  font-size: 18pt;
-  text-decoration: none;
-  color: #444;
-  width: 60%;
-  display: inline-block;
+#float-right {
+  float: right;
 }
 
-nav ul {
-  display: inline-block;
-  width: 30%;
-  text-align: right;
+.main-nav {
+  list-style:none;
+  text-align:center;
+  border-bottom: 2px solid #036080;
+  clear: both;
+  float: right;
+ width: 100%;
 }
 
-nav li {
-  margin-right: 25px;
-  display: inline;
+.main-nav li{
+    display:inline;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+.main-nav a{
+    display:inline-block;
+    padding:10px;
+    color: #036080;
+    text-decoration: none;
+    font-family: 'Corben', cursive;
+    font-size: 1.1em;
 }
 
-nav li a {
-  color: gray;
-  text-decoration: none;
-}
-
-nav li a:hover {
+.main-nav a:hover {
   text-decoration: underline;
+  text-shadow: 0px 0px 1px #036080;
 }
 
 form label {
@@ -64,6 +67,11 @@ form.quirks {
 
 .submit {
   text-align: center;
+}
+
+.btn-primary {
+  color: white;
+  background-color: #036080;
 }
 
 .label {
