turn the auth skele into a blog looking skele

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,35 @@
-<% if current_user %>
+<div class="container">
+<article>
+    <h2><a href="singlepost.html">Here's a blog title</a></h2>
 
-<% end %>
+    <div class="row">
+        <div class="group1 col-sm-6 col-md-6">
+            <span class="glyphicon glyphicon-folder-open"></span>  <a href="#">Blog type</a>
+                     <span class="glyphicon glyphicon-bookmark"></span> <a href="#">Tag #1</a>,
+                <a href="#">Tag #2</a>, <a href="#">Tag #3</a>
+        </div>
+        <div class="group2 col-sm-6 col-md-6">
+                <span class="glyphicon glyphicon-pencil"></span> <a href="singlepost.html#comments"># of Comments</a>
+                  <span class="glyphicon glyphicon-time"></span> Post time
+        </div>
+    </div>
+
+    <hr>
+
+    <img src="http://placehold.it/900x300" class="img-responsive">
+
+    <br />
+
+    <p class="lead">Here's a nice lead in to the blog post.</p>
+
+    <p>Here's the main body of the blog post, which will only be a certain number of characters and will trail off......</p>
+
+    <p class="text-right">
+        <a href="singlepost.html" class="text-right">
+            here's a link to the page the blog is on
+        </a>
+    </p>
+
+    <hr>
+</article>
+</div>
