--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,3 +1,4 @@
+<body>
 <div class="container">
   <br>
   <form class="form-horizontal" action="/sessions/new" method="POST">
@@ -39,3 +40,4 @@
   </fieldset>
   </form>
 </div>
+</body>
