--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,18 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="/css/normalize.css?app=skills">
-  <link rel="stylesheet" href="/css/application.css?app=skills">
-  <link href='https://fonts.googleapis.com/css?family=Corben' rel='stylesheet' type='text/css'>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/js/application.js?app=skills"></script>
-
-  <title></title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A Web Template">
+  <meta name="author" content="Trevor Newcomb">
+  <title>Home</title>
+  <!-- Bootstrap CSS file -->
+  <link href="/css/application.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
 </head>
-<nav class="main-nav">
-  <br><li><a href="/">Home</a></li><li><a href="/users/new">Register</a></li><li><a href="/sessions/new">Login</a></li><li><a id="float-right" href="/logout">Logout</a></li>
-</nav>
+<!-- Jquery and Bootstrap Script files -->
+
 <body>
-  <%= yield %>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
+  <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+    <div class="container">
+      <div class="navbar-header">
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a href="index.html" class="navbar-brand">Placeholder</a>
+      </div>
+      <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+        <form class="navbar-form navbar-right" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/users/new">Register</a></li>
+          <li><a href="/sessions/new">Login</a></li>
+          <li><a href="/logout">Logout</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <div class="container">
+  <article>
+    <h2><a href="singlepost.html">Here's a blog title</a></h2>
+
+    <div class="row">
+        <div class="group1 col-sm-6 col-md-6">
+            <span class="glyphicon glyphicon-folder-open"></span>  <a href="#">Blog type</a>
+                     <span class="glyphicon glyphicon-bookmark"></span> <a href="#">Tag #1</a>,
+                <a href="#">Tag #2</a>, <a href="#">Tag #3</a>
+        </div>
+        <div class="group2 col-sm-6 col-md-6">
+                <span class="glyphicon glyphicon-pencil"></span> <a href="singlepost.html#comments"># of Comments</a>
+                  <span class="glyphicon glyphicon-time"></span> Post time
+        </div>
+    </div>
+
+    <hr>
+
+    <img src="http://placehold.it/900x300" class="img-responsive">
+
+    <br />
+
+    <p class="lead">Here's a nice lead in to the blog post.</p>
+
+    <p>Here's the main body of the blog post, which will only be a certain number of characters and will trail off......</p>
+
+    <p class="text-right">
+        <a href="singlepost.html" class="text-right">
+            here's a link to the page the blog is on
+        </a>
+    </p>
+
+    <hr>
+</article>
+<div class="container">
+  <div class="col-md-3">
+
+    <!-- Subscribe to my feed widget -->
+    <div class="well text-center">
+      <p class="lead">
+        Click the thing!
+      </p>
+      <button class="btn btn-primary btn-lg">Thing!</button>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4>Categories</h4>
+      </div>
+      <ul class="list-group">
+        <li class="list-group-item"><a href="#">this thing</a></li>
+        <li class="list-group-item"><a href="#">that thing</a></li>
+        <li class="list-group-item"><a href="#">the other thing</a></li>
+        <li class="list-group-item"><a href="#">a lot of things</a></li>
+        <li class="list-group-item"><a href="#">all the things</a></li>
+      </ul>
+    </div>
+
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4>Recent Comments</h4>
+      </div>
+      <ul class="list-group">
+        <li class="list-group-item"><a href="#">I can't believe there's so many things - <em>a person</em></a></li>
+        <li class="list-group-item"><a href="#">Wow... so many things - <em>another person</em></a></li>
+        <li class="list-group-item"><a href="#">How are there so many things? - <em>the third person</em></a></li>
+        <li class="list-group-item"><a href="#">I'm drowning in all the things - <em>drowning person</em></a></li>
+      </ul>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4>Tags</h4>
+      </div>
+      <div class="panel-body">
+        <ul class="list-inline">
+          <li><a href="#">thing</a></li>
+          <li><a href="#">a thing</a></li>
+          <li><a href="#">3rd thing</a></li>
+          <li><a href="#">another thing</a></li>
+          <li><a href="#">5th thing</a></li>
+          <li><a href="#">penultimate thing</a></li>
+          <li><a href="#">last thing</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
