--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,83 +1,3 @@
-.container {
-  margin: 20px auto;
-  width: 800px;
-  padding: 0px 20px 20px 20px;
-  clear: both;
-  font-family: 'Corben', cursive;
-}
-
-.container h1 {
-  font-size: 17pt;
-}
-
-.form-group {
-  font-family: 'Corben', cursive;
-  font-weight: bold;
-  font-size: .9em;
-}
-
-#float-right {
-  float: right;
-}
-
-.main-nav {
-  list-style:none;
-  text-align:center;
-  border-bottom: 2px solid #036080;
-  clear: both;
-  float: right;
- width: 100%;
-}
-
-.main-nav li{
-    display:inline;
-    padding-right: 15px;
-    padding-left: 15px;
-}
-.main-nav a{
-    display:inline-block;
-    padding:10px;
-    color: #036080;
-    text-decoration: none;
-    font-family: 'Corben', cursive;
-    font-size: 1.1em;
-}
-
-.main-nav a:hover {
-  text-decoration: underline;
-  text-shadow: 0px 0px 1px #036080;
-}
-
-form label {
-  font-weight: bold;
-  margin-right: 20px;
-}
-
-input {
-  margin-bottom: 10px;
-}
-
-.errors {
-  color: red;
-}
-
-form.quirks {
-  display: inline-block;
-}
-
-.submit {
-  text-align: center;
-}
-
-.btn-primary {
-  color: white;
-  background-color: #036080;
-}
-
-.label {
-  font-weight: bold;
-  float: left;
-  text-align: right;
-  margin-right: 20px;
-  width: 200px;
+body {
+    margin-top: 50px !important;
 }
